compiler/tests/fixtures/invalid/semantics/group_decorator_on_special_role.viv
// Invalid: group-role decorator on special role

action chat:
    roles:
        @speaker:
            as: initiator
        @listener:
            as: recipient
    effects:
        loop @hearer* as _@h:
            _@h.informed = true
        end
